# LangChain-Udemy-Course

./: .gitignore  hello.py  pyproject.toml
06_Memory/: chatbot.py
07_OpenAI_Functions/: tool_calling.ipynb
08_RAG/: bella_vista.txt
10_Hybrid_Search_and_Indexing_API/: filtered_search.ipynb  indexing_api.ipynb
11_LangSmith/: code.ipynb
