[project]
name = "langchain-udemy-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langchain-openai>=0.3.6",
    "langchain-postgres>=0.0.13",
    "langsmith>=0.3.10",
    "notebook>=7.3.2",
    "pgvector>=0.3.6",
    "psycopg2>=2.9.10",
    "psycopg[binary]>=3.2.5",
    "python-dotenv>=1.0.1",
    "streamlit>=1.42.2",
    "streamlit-chat>=0.1.1",
]
